new ipynb files with new pip requirements

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -2,63 +2,116 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
+      "metadata": {
+        "id": "lo1ux7_IbN66"
+      },
+      "outputs": [],
+      "source": [
+        "from langchain_openai import ChatOpenAI\n",
+        "import openai\n",
+        "import json\n",
+        "import os"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_DiPZRjD3s4F",
-        "outputId": "1618f8de-2ccc-4106-f5ab-9aa3e5fbae72"
+        "outputId": "e4f6a44e-07f9-4ea3-cab3-e4474b96010f"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Gandalf is a wise and powerful Human Wizard, revered throughout the land for his magical abilities and extensive knowledge. He was born into a family of scholars, with both of his parents being accomplished wizards themselves. From a young age, Gandalf showed a keen interest and natural talent for magic, eagerly absorbing all the knowledge his parents could offer.\n",
+            "Character Stories:\n",
+            "1. Dinorah's Story:\n",
+            "Dinorah, a Human Wizard, stands out with her striking blue eyes and flowing silver hair that glows faintly when she harnesses magic. Hailing from a long line of scholars, she was raised in a prestigious academy where she honed her craft in the magical arts. Dinorah's expertise lies in manipulating the elements, specializing in spells that control fire and water. Her trusty staff is intricately carved with ancient runes, passed down through generations of wizards in her family. Her spellbook contains detailed notes and diagrams, meticulously organized to help her quickly access the spells she needs in the heat of battle. Despite her noble upbringing, Dinorah values knowledge above all else and is always eager to uncover the mysteries of the arcane.\n",
             "\n",
-            "As he grew older, Gandalf's thirst for knowledge led him to seek out other renowned wizards and scholars, traveling far and wide to uncover ancient texts and learn from the most skilled magical practitioners. He eventually settled in a quiet village, using his vast knowledge to help and teach others while continuing his own studies.\n",
+            "2. Evan's Story:\n",
+            "Evan is an Elf Ranger who was raised in the dense forests of the outlands, living in harmony with nature and honing his archery skills from a young age. He is a skilled hunter and tracker, relying on his trusty longbow and dagger to survive in the wilderness. Evan's keen senses and natural agility make him a formidable opponent in any situation.\n",
             "\n",
-            "Gandalf's trusty weapons are his staff, imbued with magical properties, and his spellbook, filled with powerful spells and incantations. With these tools at his disposal, he sets out on adventures, using his intellect and magical prowess to overcome any challenge that comes his way.\n",
-            "Legolas was born to a prominent family of Elven rangers who were known for their expert archery and wilderness survival skills. He grew up in the mystical forests of Mirkwood, learning the ways of the forest from his parents and elders. As a child, Legolas quickly excelled in archery, being able to shoot with unmatched precision and speed.\n",
+            "Having spent his formative years roaming the untamed wilderness, Evan developed a deep connection to the land and its inhabitants. He is fiercely independent and values his freedom above all else, preferring the solitude of the forest to the confines of civilization.\n",
             "\n",
-            "As he grew older, Legolas began to explore the world beyond the borders of Mirkwood, honing his survival skills and perfecting his craft. He became known as a skilled tracker and hunter, often embarking on solo adventures into the unknown.\n",
+            "Despite his solitary nature, Evan is fiercely loyal to those he considers friends, and will go to great lengths to protect them. With his sharp eyes and steady hands, Evan is a master of the hunt, always ready to defend the natural world from any threat that dares to encroach upon it.\n",
             "\n",
-            "His Outlander background shaped his independent and self-reliant nature, as well as his deep connection to nature and his natural ability to blend into his surroundings. Legolas also became proficient in close combat, wielding a trusty dagger in addition to his longbow.\n",
+            "3. Anthony's Story:\n",
+            "Anthony is a fierce Lizardfolk warrior, known for his strength in battle and unwavering loyalty to his comrades. As a fighter, he wields a powerful battleaxe and shield, making him a formidable opponent on the battlefield. Anthony's upbringing in a society that values strength and combat prowess has shaped him into a skilled warrior who thrives in the chaos of battle.\n",
             "\n",
-            "With his keen senses and unmatchable skills, Legolas travels the lands, seeking adventure and fulfilling his duty as a defender of the forest.\n",
-            "Gimli is a hardy Dwarf Fighter, standing at only 4'5\" but exuding the strength and resilience of his people. He hails from the mountainous kingdom of Erebor, a land known for its skilled craftsmen and warriors. As a member of the renowned Longbeard clan, Gimli was raised in a strict military tradition and trained in both weapon and shield combat from a young age.\n",
+            "Hailing from a Soldier background, Anthony has undergone rigorous training and has seen his fair share of warfare. He has earned respect and recognition among his peers for his courage and tactical prowess. Despite his intimidating appearance and stoic demeanor, Anthony is fiercely dedicated to protecting those in need and upholding justice in a world filled with dangers.\n",
             "\n",
-            "Growing up, Gimli showed a fierce determination and natural aptitude for battle, earning him a place among the elite Dwarf soldiers. His proficiency in wielding the battleaxe, a weapon passed down through generations of his family, is unmatched. His sturdy shield, carved with intricate Dwarven designs, offers him superior protection on the battlefield.\n",
+            "With his battleaxe in hand and shield at the ready, Anthony is always prepared to face whatever challenges come his way, standing as a stalwart defender of his allies and a fearsome adversary to his foes.\n",
             "\n",
-            "With a strong sense of duty and a deep loyalty to his clan, Gimli left his homeland to serve as a soldier for hire, traveling to different lands to fight for a noble cause. Though short in stature, Gimli's bravery, skill, and unwavering loyalty make him a formidable opponent on any battlefield.\n"
+            "Character Images:\n",
+            "1. Dinorah's Image:\n",
+            "https://oaidalleapiprodscus.blob.core.windows.net/private/org-lAX5g2uvwKgUWIaJSrME1CLK/user-xN2UrnljiWpCt7XCuZPB1ADw/img-WIlrO9e0zraTBpSYsNyRV4qa.png?st=2024-04-12T17%3A36%3A18Z&se=2024-04-12T19%3A36%3A18Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-12T07%3A41%3A28Z&ske=2024-04-13T07%3A41%3A28Z&sks=b&skv=2021-08-06&sig=WHBk32RfTBhXwq%2Bu5HOZOYcq%2BdJUlWOpHRuIpGSMb2c%3D\n",
+            "\n",
+            "2. Evan's Image:\n",
+            "https://oaidalleapiprodscus.blob.core.windows.net/private/org-lAX5g2uvwKgUWIaJSrME1CLK/user-xN2UrnljiWpCt7XCuZPB1ADw/img-NDsJ4RO18iMxWthzNPYQSQds.png?st=2024-04-12T17%3A36%3A34Z&se=2024-04-12T19%3A36%3A34Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-12T12%3A05%3A44Z&ske=2024-04-13T12%3A05%3A44Z&sks=b&skv=2021-08-06&sig=buLDR5nx00VAkWMxIwV74gmAYgBP%2BQE/dDP8M0BFSQo%3D\n",
+            "\n",
+            "3. Anthony's Image:\n",
+            "https://oaidalleapiprodscus.blob.core.windows.net/private/org-lAX5g2uvwKgUWIaJSrME1CLK/user-xN2UrnljiWpCt7XCuZPB1ADw/img-d2BGWUdEHdQ4Hn52pgBjInGD.png?st=2024-04-12T17%3A36%3A50Z&se=2024-04-12T19%3A36%3A50Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-12T08%3A13%3A19Z&ske=2024-04-13T08%3A13%3A19Z&sks=b&skv=2021-08-06&sig=LhfOilS1k8w0%2B37m8DgjgX6DS2ULXmO5BODfpJm4z88%3D\n",
+            "\n",
+            "Beginning of Adventure Story:\n",
+            "The fading light of the setting sun cast long shadows across the clearing where Dinorah, Evan, and Anthony stood, their resolve unwavering as they prepared to embark on their epic journey. A gentle breeze rustled through the trees, carrying the promise of adventure and danger on its whispering breath.\n",
+            "\n",
+            "Dinorah, her silver hair shimmering in the fading light, adjusted the straps of her leather satchel and tightened her grip on her intricately carved staff. The runes etched into its smooth surface hummed with latent power, responding to her touch with a faint glow. She cast a thoughtful glance towards Evan, the Elf Ranger, whose sharp eyes scanned the surrounding forest with a hunter's focus. His longbow was strung and ready, a quiver of arrows at his side, his dagger glinting in the dying light.\n",
+            "\n",
+            "Anthony, the imposing Lizardfolk warrior, stood tall and resolute, his battleaxe gleaming in the fading sunlight. His shield bore the scars of countless battles, a testament to his skill and strength. Despite the calm exterior he presented to his companions, a fire burned within him, fueling his determination to confront whatever challenges lay ahead.\n",
+            "\n",
+            "As the last rays of sunlight dipped below the horizon, casting the land into shadow, a sense of anticipation filled the air. The companions exchanged nods of silent determination, their shared purpose binding them together in a bond stronger than any words could convey.\n",
+            "\n",
+            "With a final glance towards the darkening forest ahead, Dinorah raised her staff, Evan notched an arrow, and Anthony tightened his grip on his battleaxe. The time had come to step onto the unknown path that awaited them, to face the trials and tribulations of their quest with courage and hope in their hearts.\n",
+            "\n",
+            "Together, as the first stars began to twinkle in the night sky above, Dinorah, Evan, and Anthony took their first steps into the darkness, united in their quest and ready to confront whatever challenges fate had in store for them. The stage was set for their epic adventure to unfold, the land of fantasy waiting to reveal its secrets to those brave enough to seek them.\n",
+            "D&D Campaign:\n",
+            "Welcome adventurers to the world of magic and mystery!\n",
+            "In this campaign, you'll embark on a journey alongside:\n",
+            "1. Dinorah, the Human Wizard\n",
+            "   Background: Scholar\n",
+            "   Weapons: Staff, Spellbook\n",
+            "\n",
+            "2. Evan, the Elf Ranger\n",
+            "   Background: Outlander\n",
+            "   Weapons: Longbow, Dagger\n",
+            "\n",
+            "3. Anthony, the Lizard Fighter\n",
+            "   Background: Soldier\n",
+            "   Weapons: Battleaxe, Shield\n",
+            "\n",
+            "Your quest awaits! May the dice roll in your favor!\n"
           ]
         }
       ],
       "source": [
-        "import openai\n",
-        "\n",
+        "from openai import OpenAI\n",
+        "client = OpenAI()\n",
         "\n",
         "# JSON data\n",
         "character_data = {\n",
         "  \"characters\": [\n",
         "    {\n",
-        "      \"Name\": \"Gandalf\",\n",
+        "      \"Name\": \"Dinorah\",\n",
         "      \"Race\": \"Human\",\n",
         "      \"Class\": \"Wizard\",\n",
         "      \"Weapons\": [\"Staff\", \"Spellbook\"],\n",
         "      \"Background\": \"Scholar\"\n",
         "    },\n",
         "    {\n",
-        "      \"Name\": \"Legolas\",\n",
+        "      \"Name\": \"Evan\",\n",
         "      \"Race\": \"Elf\",\n",
         "      \"Class\": \"Ranger\",\n",
         "      \"Weapons\": [\"Longbow\", \"Dagger\"],\n",
         "      \"Background\": \"Outlander\"\n",
         "    },\n",
         "    {\n",
-        "      \"Name\": \"Gimli\",\n",
-        "      \"Race\": \"Dwarf\",\n",
+        "      \"Name\": \"Anthony\",\n",
+        "      \"Race\": \"Lizard\",\n",
         "      \"Class\": \"Fighter\",\n",
         "      \"Weapons\": [\"Battleaxe\", \"Shield\"],\n",
         "      \"Background\": \"Soldier\"\n",
@@ -66,21 +119,110 @@
         "  ]\n",
         "}\n",
         "\n",
+        "# List to store generated character stories\n",
+        "character_stories = []\n",
+        "\n",
         "# Generate fantasy background stories for each character\n",
         "for character in character_data[\"characters\"]:\n",
-        "    weapons = character['Weapons']\n",
-        "    weapons[-1] = f\"and {weapons[-1]}\"\n",
-        "    prompt = f\"Use 150 words to describe the background of a {character['Race']} {character['Class']} named {character['Name']}. This character's weapons are the {', '.join(character['Weapons'])}. They hail from a {character['Background']} background.\"\n",
+        "    message = f\"Describe the background of a {character['Race']} {character['Class']} named {character['Name']}. This character's weapons are the {', '.join(character['Weapons'])}. They hail from a {character['Background']} background. Use 150 words.\"\n",
         "\n",
-        "    # Send a message to the OpenAI API and receive a response\n",
-        "    response = openai.Completion.create(\n",
-        "        engine=\"gpt-3.5-turbo-instruct\",\n",
-        "        prompt=prompt,\n",
-        "        max_tokens=300\n",
+        "    response = client.chat.completions.create(\n",
+        "        model=\"gpt-3.5-turbo\",\n",
+        "        messages=[\n",
+        "            {\"role\": \"system\", \"content\": \"You are a Dungeons & Dragons expert\"},\n",
+        "            {\"role\": \"user\", \"content\": message}\n",
+        "        ]\n",
         "    )\n",
         "\n",
-        "    output = response.choices[0].text.strip()\n",
-        "    print(output)\n"
+        "    character_story = response.choices[0].message.content.strip()\n",
+        "    character_stories.append(character_story)\n",
+        "\n",
+        "# Print character stories\n",
+        "print(\"Character Stories:\")\n",
+        "for i, character_story in enumerate(character_stories):\n",
+        "    print(f\"{i+1}. {character_data['characters'][i]['Name']}'s Story:\")\n",
+        "    print(character_story)\n",
+        "    print()\n",
+        "\n",
+        "    # Combine all character stories into one text\n",
+        "all_stories = \"\\n\\n\".join(character_stories)\n",
+        "\n",
+        "# Prompt for generating a general story for the adventure\n",
+        "prompt = f\"As the sun sets on the land of fantasy, a group of adventurers gathers for the beginning of their epic journey. Among them are {', '.join([character['Name'] for character in character_data['characters']])}. Each with their own unique background, they come together with a shared purpose: to embark on a Dungeons & Dragons campaign like no other. Here are their stories:\\n\\n{all_stories}\\n\\nNow, as they stand on the threshold of adventure, the path before them is uncertain. Write the opening scene of their quest.\"\n",
+        "\n",
+        "# Generate the beginning of the adventure story\n",
+        "response = client.chat.completions.create(\n",
+        "    model=\"gpt-3.5-turbo\",\n",
+        "    messages=[\n",
+        "        {\"role\": \"system\", \"content\": \"You are a Dungeons & Dragons expert\"},\n",
+        "        {\"role\": \"user\", \"content\": prompt}\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "# Extract the generated story from the response\n",
+        "beginning_of_adventure = response.choices[0].message.content.strip()\n",
+        "\n",
+        "\n",
+        "# List to store generated character images\n",
+        "character_images = []\n",
+        "# Generate fantasy-style images for each character\n",
+        "for character in character_data[\"characters\"]:\n",
+        "    prompt = f\"Generate a fantasy image of a {character['Race']} {character['Class']} named {character['Name']}. They are equipped with {', '.join(character['Weapons'])} and have a {character['Background']} background.\"\n",
+        "\n",
+        "    response = client.images.generate(\n",
+        "        model=\"dall-e-3\",\n",
+        "        prompt=prompt ,\n",
+        "        size=\"1024x1024\",\n",
+        "        quality=\"hd\",\n",
+        "        #n of imgs\n",
+        "        n=1,\n",
+        "    )\n",
+        "\n",
+        "    character_image_url = response.data[0].url\n",
+        "    character_images.append(character_image_url)\n",
+        "\n",
+        "# Print character images\n",
+        "print(\"Character Images:\")\n",
+        "for i, character_image_url in enumerate(character_images):\n",
+        "    print(f\"{i+1}. {character_data['characters'][i]['Name']}'s Image:\")\n",
+        "    print(character_image_url)\n",
+        "    print()\n",
+        "\n",
+        "# Print the beginning of the adventure story\n",
+        "print(\"Beginning of Adventure Story:\")\n",
+        "print(beginning_of_adventure)\n",
+        "\n",
+        "\n",
+        "# Print D&D Campaign\n",
+        "print(\"D&D Campaign:\")\n",
+        "print(\"Welcome adventurers to the world of magic and mystery!\")\n",
+        "print(\"In this campaign, you'll embark on a journey alongside:\")\n",
+        "for i, character in enumerate(character_data[\"characters\"]):\n",
+        "    print(f\"{i+1}. {character['Name']}, the {character['Race']} {character['Class']}\")\n",
+        "    print(f\"   Background: {character['Background']}\")\n",
+        "    print(f\"   Weapons: {', '.join(character['Weapons'])}\")\n",
+        "    print()\n",
+        "\n",
+        "print(\"Your quest awaits! May the dice roll in your favor!\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "QVKKZrF6zmXJ"
+      },
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import json\n",
+        "from langchain_openai import ChatOpenAI\n",
+        "\n",
+        "# Initialize ChatOpenAI with your API key\n",
+        "chat = ChatOpenAI(\n",
+        "    openai_api_key=os.environ[\"OPENAI_API_KEY\"],\n",
+        "    model='gpt-3.5-turbo'\n",
+        ")\n"
       ]
     }
   ],
