Created working pages that connected to server backend. Started Character Sheet component

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "lo1ux7_IbN66"
       },
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -31,44 +31,40 @@
           "text": [
             "Character Stories:\n",
             "1. Dinorah's Story:\n",
-            "Dinorah, a Human Wizard, stands out with her striking blue eyes and flowing silver hair that glows faintly when she harnesses magic. Hailing from a long line of scholars, she was raised in a prestigious academy where she honed her craft in the magical arts. Dinorah's expertise lies in manipulating the elements, specializing in spells that control fire and water. Her trusty staff is intricately carved with ancient runes, passed down through generations of wizards in her family. Her spellbook contains detailed notes and diagrams, meticulously organized to help her quickly access the spells she needs in the heat of battle. Despite her noble upbringing, Dinorah values knowledge above all else and is always eager to uncover the mysteries of the arcane.\n",
+            "Dinorah is a Human Wizard who dedicates her life to the pursuit of knowledge and magic. From a young age, she displayed an insatiable curiosity and thirst for learning. Raised in a prestigious family of scholars, Dinorah was encouraged to explore the mysteries of the arcane arts. She possesses a natural gift for magic and excels in the rigorous study of spellcasting.\n",
+            "\n",
+            "Armed with her trusty staff and a spellbook filled with ancient incantations, Dinorah travels the lands in search of forgotten lore and hidden magical secrets. Her scholarly background has instilled in her a deep appreciation for history and a love of unraveling magical mysteries.\n",
+            "\n",
+            "Driven by her thirst for knowledge and a desire to uncover the secrets of the universe, Dinorah is a formidable wizard with a keen intellect and a relentless determination to master the forces of magic.\n",
             "\n",
             "2. Evan's Story:\n",
-            "Evan is an Elf Ranger who was raised in the dense forests of the outlands, living in harmony with nature and honing his archery skills from a young age. He is a skilled hunter and tracker, relying on his trusty longbow and dagger to survive in the wilderness. Evan's keen senses and natural agility make him a formidable opponent in any situation.\n",
+            "Evan is a stoic Elf Ranger from the wilds of an ancient forest, where he honed his skills in archery and tracking. Born into a tribe of wood elves, Evan was always drawn to the solitude of the forest and the whispering winds of the trees. As a skilled hunter and protector of his people, he wields his trusty Longbow with deadly precision and a Dagger for close combat encounters.\n",
             "\n",
-            "Having spent his formative years roaming the untamed wilderness, Evan developed a deep connection to the land and its inhabitants. He is fiercely independent and values his freedom above all else, preferring the solitude of the forest to the confines of civilization.\n",
-            "\n",
-            "Despite his solitary nature, Evan is fiercely loyal to those he considers friends, and will go to great lengths to protect them. With his sharp eyes and steady hands, Evan is a master of the hunt, always ready to defend the natural world from any threat that dares to encroach upon it.\n",
+            "Raised far from the hustle and bustle of civilization, Evan is a true Outlander, navigating the untamed wilderness with ease and relying on his keen instincts to survive. Despite his solitary nature, Evan's loyalty to his tribe is unwavering, and he will go to great lengths to protect those he cares about. With his bow in hand and his wolf companion by his side, Evan roams the forests in search of adventure and purpose.\n",
             "\n",
             "3. Anthony's Story:\n",
-            "Anthony is a fierce Lizardfolk warrior, known for his strength in battle and unwavering loyalty to his comrades. As a fighter, he wields a powerful battleaxe and shield, making him a formidable opponent on the battlefield. Anthony's upbringing in a society that values strength and combat prowess has shaped him into a skilled warrior who thrives in the chaos of battle.\n",
+            "Anthony is a stoic Lizardfolk Fighter, with emerald scales and a battle-hardened demeanor. Raised in the swamps by a tribe renowned for their strength in combat, Anthony quickly distinguished himself as a skilled warrior. He developed his expertise wielding a battleaxe with deadly precision, always accompanied by a sturdy shield that he regards as his most trusted ally in battle.\n",
             "\n",
-            "Hailing from a Soldier background, Anthony has undergone rigorous training and has seen his fair share of warfare. He has earned respect and recognition among his peers for his courage and tactical prowess. Despite his intimidating appearance and stoic demeanor, Anthony is fiercely dedicated to protecting those in need and upholding justice in a world filled with dangers.\n",
-            "\n",
-            "With his battleaxe in hand and shield at the ready, Anthony is always prepared to face whatever challenges come his way, standing as a stalwart defender of his allies and a fearsome adversary to his foes.\n",
+            "Having been part of a tribe that prioritizes discipline and unity, Anthony carries himself with a strong sense of duty and loyalty. His time spent as a soldier in his tribe's army has honed his combat skills and instilled in him a deep respect for military strategy and tactics. Now, as he ventures beyond the swamps and into the wider world, Anthony seeks to unravel the mysteries of his own past while continuing to prove himself as a formidable warrior.\n",
             "\n",
             "Character Images:\n",
             "1. Dinorah's Image:\n",
-            "https://oaidalleapiprodscus.blob.core.windows.net/private/org-lAX5g2uvwKgUWIaJSrME1CLK/user-xN2UrnljiWpCt7XCuZPB1ADw/img-WIlrO9e0zraTBpSYsNyRV4qa.png?st=2024-04-12T17%3A36%3A18Z&se=2024-04-12T19%3A36%3A18Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-12T07%3A41%3A28Z&ske=2024-04-13T07%3A41%3A28Z&sks=b&skv=2021-08-06&sig=WHBk32RfTBhXwq%2Bu5HOZOYcq%2BdJUlWOpHRuIpGSMb2c%3D\n",
+            "https://oaidalleapiprodscus.blob.core.windows.net/private/org-lAX5g2uvwKgUWIaJSrME1CLK/user-xN2UrnljiWpCt7XCuZPB1ADw/img-DtOqa1KqbPStTfEhH8lzJjJD.png?st=2024-04-29T01%3A48%3A26Z&se=2024-04-29T03%3A48%3A26Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-28T04%3A33%3A01Z&ske=2024-04-29T04%3A33%3A01Z&sks=b&skv=2021-08-06&sig=bsXzX1C7RitE%2BmaNSRsY80vPLv7twt%2BqNbNn8/L6knE%3D\n",
             "\n",
             "2. Evan's Image:\n",
-            "https://oaidalleapiprodscus.blob.core.windows.net/private/org-lAX5g2uvwKgUWIaJSrME1CLK/user-xN2UrnljiWpCt7XCuZPB1ADw/img-NDsJ4RO18iMxWthzNPYQSQds.png?st=2024-04-12T17%3A36%3A34Z&se=2024-04-12T19%3A36%3A34Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-12T12%3A05%3A44Z&ske=2024-04-13T12%3A05%3A44Z&sks=b&skv=2021-08-06&sig=buLDR5nx00VAkWMxIwV74gmAYgBP%2BQE/dDP8M0BFSQo%3D\n",
+            "https://oaidalleapiprodscus.blob.core.windows.net/private/org-lAX5g2uvwKgUWIaJSrME1CLK/user-xN2UrnljiWpCt7XCuZPB1ADw/img-m5StGIEP5ijpSqr7ZoJXXUKs.png?st=2024-04-29T01%3A48%3A43Z&se=2024-04-29T03%3A48%3A43Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-28T19%3A42%3A18Z&ske=2024-04-29T19%3A42%3A18Z&sks=b&skv=2021-08-06&sig=K5vDCJwq8XgeQ%2B2NeD6KH4scV2ytDn2rzZJGu/5WCbU%3D\n",
             "\n",
             "3. Anthony's Image:\n",
-            "https://oaidalleapiprodscus.blob.core.windows.net/private/org-lAX5g2uvwKgUWIaJSrME1CLK/user-xN2UrnljiWpCt7XCuZPB1ADw/img-d2BGWUdEHdQ4Hn52pgBjInGD.png?st=2024-04-12T17%3A36%3A50Z&se=2024-04-12T19%3A36%3A50Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-12T08%3A13%3A19Z&ske=2024-04-13T08%3A13%3A19Z&sks=b&skv=2021-08-06&sig=LhfOilS1k8w0%2B37m8DgjgX6DS2ULXmO5BODfpJm4z88%3D\n",
+            "https://oaidalleapiprodscus.blob.core.windows.net/private/org-lAX5g2uvwKgUWIaJSrME1CLK/user-xN2UrnljiWpCt7XCuZPB1ADw/img-xAnsVbsiuQWqTDpkb4Jw5V8E.png?st=2024-04-29T01%3A48%3A59Z&se=2024-04-29T03%3A48%3A59Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-28T12%3A32%3A01Z&ske=2024-04-29T12%3A32%3A01Z&sks=b&skv=2021-08-06&sig=gJi6DFfitocZPfvB5d0OVB8Hn17WSjN7HBJZ6wUNPKY%3D\n",
             "\n",
             "Beginning of Adventure Story:\n",
-            "The fading light of the setting sun cast long shadows across the clearing where Dinorah, Evan, and Anthony stood, their resolve unwavering as they prepared to embark on their epic journey. A gentle breeze rustled through the trees, carrying the promise of adventure and danger on its whispering breath.\n",
+            "As the last traces of sunlight fade from the sky, the trio of adventurers - Dinorah the Human Wizard, Evan the Elf Ranger, and Anthony the Lizardfolk Fighter - find themselves gathered at the edge of a dense, ancient forest. The air is thick with the scent of moss and earth, and the sound of distant wildlife fills the air.\n",
             "\n",
-            "Dinorah, her silver hair shimmering in the fading light, adjusted the straps of her leather satchel and tightened her grip on her intricately carved staff. The runes etched into its smooth surface hummed with latent power, responding to her touch with a faint glow. She cast a thoughtful glance towards Evan, the Elf Ranger, whose sharp eyes scanned the surrounding forest with a hunter's focus. His longbow was strung and ready, a quiver of arrows at his side, his dagger glinting in the dying light.\n",
+            "Dinorah adjusts the straps of her spellbook, her eyes alight with a fierce determination as she gazes into the depths of the forest. Evan, with his Longbow slung over his shoulder and his loyal wolf companion at his side, stands tall and watchful, his keen eyes scanning the shadows for any sign of danger. Anthony, his battleaxe gleaming in the fading light, takes a deep breath and squares his shoulders, ready for whatever challenges may lie ahead.\n",
             "\n",
-            "Anthony, the imposing Lizardfolk warrior, stood tall and resolute, his battleaxe gleaming in the fading sunlight. His shield bore the scars of countless battles, a testament to his skill and strength. Despite the calm exterior he presented to his companions, a fire burned within him, fueling his determination to confront whatever challenges lay ahead.\n",
+            "A sense of excitement pulses through the air as the adventurers share a final moment of silence, each one feeling the weight of the unknown path that lies before them. With a nod to one another, they step forward into the darkness of the forest, their footsteps echoing softly on the leaf-strewn ground.\n",
             "\n",
-            "As the last rays of sunlight dipped below the horizon, casting the land into shadow, a sense of anticipation filled the air. The companions exchanged nods of silent determination, their shared purpose binding them together in a bond stronger than any words could convey.\n",
-            "\n",
-            "With a final glance towards the darkening forest ahead, Dinorah raised her staff, Evan notched an arrow, and Anthony tightened his grip on his battleaxe. The time had come to step onto the unknown path that awaited them, to face the trials and tribulations of their quest with courage and hope in their hearts.\n",
-            "\n",
-            "Together, as the first stars began to twinkle in the night sky above, Dinorah, Evan, and Anthony took their first steps into the darkness, united in their quest and ready to confront whatever challenges fate had in store for them. The stage was set for their epic adventure to unfold, the land of fantasy waiting to reveal its secrets to those brave enough to seek them.\n",
+            "Their quest begins here, in the heart of the wilderness, where ancient secrets and untold dangers await. Together, Dinorah, Evan, and Anthony are prepared to face whatever challenges come their way, united in purpose and bound by the shared promise of adventure that beckons from beyond the trees.\n",
             "D&D Campaign:\n",
             "Welcome adventurers to the world of magic and mystery!\n",
             "In this campaign, you'll embark on a journey alongside:\n",
@@ -90,6 +86,7 @@
       ],
       "source": [
         "from openai import OpenAI\n",
+        "\n",
         "client = OpenAI()\n",
         "\n",
         "# JSON data\n",
@@ -208,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "id": "QVKKZrF6zmXJ"
       },
@@ -246,7 +243,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.0"
+      "version": "3.12.2"
     }
   },
   "nbformat": 4,
